# numeric-differentiation

./: ChangeLog.md  numeric-differentiation.cabal
src/: Bounded.hs  Rounded.hs  Scalar.hs
src/Numeric/: Differentiation.hs
